<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="android_auto_update_dialog_title">发现新版本</string>
    <string name="android_auto_update_notify_ticker">发现新版本,点击进行升级</string>
    <string name="android_auto_update_notify_content">发现新版本,点击进行升级</string>
    <string name="android_auto_update_dialog_btn_download">立即下载</string>
    <string name="android_auto_update_dialog_btn_cancel">以后再说</string>
    <string name="android_auto_update_toast_no_new_update">已经是最新版本</string>
    <string name="android_auto_update_download_progress">正在下载:%1$d%%</string>
    <string name="android_auto_update_dialog_checking">正在检查版本</string>
    <string name="app_name12">7好零距离</string>
    <string name="hot">热门</string>
    <string name="cicle">圈子</string>
    <string name="my_tie">我的帖子</string>
    <string name="app_name">家天下智慧社区</string>
    <string name="cloud_city"></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_my_property_activity2">MyPropertyActivity2</string>
    <string name="title_activity_sweet_circle_main_activity2">SweetCircleMainActivity2</string>
    <string name="activity">活动</string>
    <string name="hot_topic">热门话题</string>
    <string name="mutual">互助</string>
    <string name="doorstep">家门口</string>
    <string name="opendoor">开门</string>
    <string name="smarthome">智慧家庭</string>
    <string name="property">物业</string>
    <string name="lingli">邻里</string>
    <string name="consume">消费</string>
    <string name="health">健康</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="permlab_useSip">Use sip</string>
    <string name="permdesc_useSip">Place SIP calls, send SIP messages and control SIP communications</string>
    <string name="permlab_configureSip">Use sip</string>
    <string name="permdesc_configureSip">Place SIP calls, send SIP messages and control SIP communications</string>
    <string name="resend">重新发送</string>
    <string name="getsecuritycode">获取验证码</string>
    <string name="finish">完成</string>
    <string name="next">下一步</string>
    <string name="my_info">我的消息</string>
    <string name="all_info">全部消息</string>
    <string name="official_push">官方推送</string>
    <string name="property_news">物业消息</string>
    <string name="legal_news">法律消息</string>
    <string name="orders_news">订单消息</string>
    <string name="info_state">消息状态</string>
    <string name="no_read">未读</string>
    <string name="all">全部</string>
    <string name="have_read">已读</string>
    <string name="no_data">暂无数据</string>
    <string name="money_maker">摇钱树</string>
    <string name="money_maker_des">易理财</string>
    <string name="investment_account">投资帐户</string>
    <string name="recharge">转入</string>
    <string name="withdraw">转出</string>
    <string name="investment">已投项目</string>
    <string name="annual_income">年收益</string>
    <string name="total_loans">贷款总额</string>
    <string name="loan_period">借款期限</string>
    <string name="the_number_has_invested">已投%s人</string>
    <string name="going">进行中</string>
    <string name="revoked">已撤销</string>
    <string name="repayment_of">还款中</string>
    <string name="it_has_also_finished">已还完</string>
    <string name="account_amount">帐户金额：  </string>
    <string name="to_be_Amount">待收金额：  </string>
    <string name="amount_freeze">冻结金额：</string>
    <string name="my_want_investment">我要投资</string>
    <string name="homepage">个人主页</string>
    <string name="finanical_records">资金记录</string>
    <string name="password_settings">交易密码设置</string>
    <string name="reset_password">重置密码</string>
    <string name="station_letter">站内信</string>
    <string name="income_calculation">收益计算</string>
    <string name="feedback">意见反馈</string>
    <string name="investment_projects">投资项目</string>
    <string name="projects_list">项目列表</string>
    <string name="prject_details">项目详情</string>
    <string name="calculation_result">计算结果</string>
    <string name="myhome">我的房</string>
    <string name="bill">帐单</string>
    <string name="repair">维修</string>
    <string name="rental">租售</string>
    <string name="publish">发布</string>
    <string name="tip_choose_province">请选择省份</string>
    <string name="tip_choose_city">请选择城市</string>
    <string name="tip_choose_area">请选择区</string>
    <string name="sort">分类</string>
    <string name="please_input_goods">请输入商品关键字</string>
    <string name="item_smartlife">智能生活</string>
    <string name="item_elevator">电梯联动</string>
    <string name="tab_sip">可视对讲</string>
    <string name="tab_community">社区服务</string>
    <string name="tab_information">社区资讯</string>
    <string name="tab_smartlife">智能生活</string>
    <string name="tab_auxiliary">智能控制</string>
    <string name="tab_webnav">网页导航</string>
    <string name="label_smartlife_package">智能家居包名:</string>
    <string name="label_smartlife_class">智能家居类名:</string>
    <string name="koti_notinstalled_smartlife">请安装智能控制</string>
    <string name="label_sip_display">显示名称:</string>
    <string name="label_sip_username">SIP帐号:</string>
    <string name="label_sip_password">密码:</string>
    <string name="label_sip_server">服务器地址:</string>
    <string name="label_sip_file_path">配置文件路径:</string>
    <string name="service_no_support">该服务暂不可用！</string>
    <string name="community_phonedialog_offline">设备不在线，\n请稍后再拨。</string>
    <string name="koti_customer_service">物业客户中心</string>
    <string name="koti_living_services">生活服务</string>
    <string name="koti_information_weather">天气预报</string>
    <string name="koti_information_community">社区动态</string>
    <string name="koti_information_news">最新资讯</string>
    <string name="koti_information_notification">社区通知</string>
    <string name="have_read_messages">已读</string>
    <string name="have_not_read_messages">未读</string>
    <string name="menu_return">返回</string>
    <string name="all_messages"><b><![CDATA[全部]]></b></string>
    <string name="delete_message">删除资讯信息</string>
    <string name="del_dialog_message">确定要删除此资讯信息？</string>
    <string name="koti_information_unread_count" formatted="false">%s条未读%s</string>
    <string name="koti_information_count" formatted="false">%s条%s</string>
    <string name="koti_weather_city">广州</string>
    <string name="koti_weather_detail">每小时天气预报</string>
    <string name="koti_weather_home">HOME</string>
    <string name="koti_weather_img">图标</string>
    <string name="realtime_temperature">27</string>
    <string name="koti_forecast">暴雨</string>
    <string name="koti_temperature_range">25 - 33</string>
    <string name="koti_wind_direction">风力2-3级  东南风</string>
    <string name="koti_humidity">湿度  80%</string>
    <string name="koti_pm_value">PM2.5:23</string>
    <string name="koti_date">07/23 六月初五</string>
    <string name="koti_update_time">更新于  12-7-24 14:01</string>
    <string name="advanced_display_name_empty">名称或号码不能为空！</string>
    <string name="koti_indoor_no">户内通</string>
    <string name="koti_gate_no">门口机</string>
    <string name="koti_small_gate_no">小门口机</string>
    <string name="koti_management_no">管理机</string>
    <string name="koti_sip_no">SIP帐号</string>
    <string name="no_contacts">无联系人</string>
    <string name="koti_contacts">通讯录</string>
    <string name="koti_config_no">配置号码</string>
    <string name="koti_add_contact">添加联系人</string>
    <string name="koti_name_and_no_exist">联系人已经存在</string>
    <string name="koti_contact_name">名称</string>
    <string name="koti_contact_no">联系人号码</string>
    <string name="contact_name">名称:</string>
    <string name="contact_no">号码:</string>
    <string name="koti_edit_contact">编辑联系人</string>
    <string name="koti_add_contacts_detail">添加到联系列表</string>
    <string name="koti_add_bt">添加</string>
    <string name="koti_cancel_bt">清空</string>
    <string name="koti_edit_bt">编辑</string>
    <string name="koti_no_calllog">无通话记录</string>
    <string name="koti_sendmsg_bt">发送信息</string>
    <string name="koti_call_bt">拨打电话</string>
    <string name="koti_mobile_number" formatted="false">移动电话    %s</string>
    <string name="koti_fixed_number" formatted="false">宅电    %s</string>
    <string name="koti_indoor_number" formatted="false">户内通    %s</string>
    <string name="koti_group_bt">群组</string>
    <string name="koti_all_contacts">所有联系人</string>
    <string name="koti_search_text">搜索</string>
    <string name="koti_contact_delete">删除通讯录</string>
    <string name="tip_message_no_item">无信息</string>
    <string name="label_confirm">确定</string>
    <string name="label_back">返回</string>
    <string name="loading">Loading</string>
    <string name="tip_package">智能家居包名</string>
    <string name="tip_class">智能家居类名</string>
    <string name="tip_edit_no_empty">输入选择不能为空</string>
    <string name="tip_smartlife_no_cfg">该应用没有配置智能家居</string>
    <string name="tip_smartlife_cfg_error">没有找到配置的智能家居应用</string>
    <string name="tip_update_cfg_success">KOTI SIP帐户配置文件更新成功</string>
    <string name="tip_p2p_model">KOTI SIP 点对点模式切换成功!</string>
    <string name="tip_message_send">消息已发送</string>
    <string name="tip_smartlife_cfg_item">例如: jhsys.kotisuper/jhsys.kotisuper.LoadingPage;\ncom.easymobiz.aycontrol/com.easymobiz.droidcontrol.activity.MainActivity</string>
    <string name="tip_exit_app">确定要退出KOTI应用?</string>
    <string name="app_exit">退出</string>
    <string name="tip_sip_no_config">KOTI SIP帐户不可用</string>
    <string name="tip_no_external_storage">外存储不可用</string>
    <string name="tip_export_path">导出路径:</string>
    <string name="tip_file_no_exsit">文件不存在</string>
    <string name="tip_export_file_fail">导入文件失败</string>
    <string name="tip_export_file_success">导入文件成功</string>
    <string name="menu_theme">主题</string>
    <string name="menu_sip_info">本机信息</string>
    <string name="menu_base_setting">基本设置</string>
    <string name="menu_sip_restart">重新登录</string>
    <string name="menu_cfg_download">更新配置</string>
    <string name="menu_advanced_setting">高级设置</string>
    <string name="menu_setting">设置</string>
    <string name="menu_locale_en">English</string>
    <string name="menu_locale_zh">更新数据</string>
    <string name="sip_message_unlock">开锁指令已发送</string>
    <string name="setting_echo_cancelled">语音通话回声消除</string>
    <string name="setting_dial_voice">拨号提示音</string>
    <string name="setting_voice_volumn">通话音量</string>
    <string name="setting_ad_p2p">点对点模式(无SIP服务器)</string>
    <string name="setting_ad_compatibility">版本兼容</string>
    <string name="setting_ad_community">访问社区(本地)</string>
    <string name="setting_language">语言</string>
    <string name="btn_export_file">导出默认配置</string>
    <string name="btn_update">更新</string>
    <string name="btn_change">更改</string>
    <string name="hardware_version_name">hardware_version_tv</string>
    <string name="software_version_name">software_version_tv</string>
    <string name="manufacturer_name">manufacturer</string>
    <string name="product_class_name">product_class</string>
    <string name="random_number">99</string>
    <string name="input_your_info">请如实填写你的信息:</string>
    <string name="apply_name">申请人姓名:</string>
    <string name="ower_name">业主姓名:</string>
    <string name="owner_phone">业主手机号码:</string>
    <string name="apply_property">申请授权的物业:</string>
    <string name="apply_autho_remark">申请授权说明:</string>
    <string name="apply_remark">你可以输入100个字</string>
    <string name="submit">提交</string>
    <string name="ower">业主:</string>
    <string name="apply_time">申请时间:</string>
    <string name="ower_text">陈小海</string>
    <string name="apply_property_addr">镜湖花园一期一单0101</string>
    <string name="apply_time_test">2015&#8211;01&#8211;02 05:06</string>
    <string name="input_user_info">请输入验证身份信息</string>
    <string name="update_pwd_first">第一步：身份验证</string>
    <string name="input_card_name">请输入您身份证上的姓名</string>
    <string name="input_card_id">请输入您的身份证号码</string>
    <string name="next_step">下一步</string>
</resources>